updated code and readme

--- a/code.ipynb
+++ b/code.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "62df05d7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import plotly.express as px\n"
    ]
   },
   {
@@ -412,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac88da64",
+   "id": "3e867b60",
    "metadata": {},
    "outputs": [],
    "source": []
